# Lion

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  premake5.lua
Editor/: Editor.cpp  Editor.h  Editor.rc  EditorPch.h  ProjectManager.h  premake5.lua  shortcuts.cfg
Editor/Source/: EditorGui.cpp  EditorGui.h  Expression.cpp  Expression.h  ModuleSymbols.cpp  ModuleSymbols.h  ProjectBuild.cpp  ProjectBuild.h  Projects.cpp  Projects.h  Sealer.cpp  Sealer.h
Editor/Source/Layer/: EditorLayer.cpp  EditorLayer.h  ProjectManagerLayer.cpp  ProjectManagerLayer.h
Editor/Source/Scripts/: Spinner.cpp
Engine/: Core.h  Engine.h  Engine.hint  PCH.h  cpp.hint  premake5.lua
Engine/GLF3D/: GLF3D.h
Engine/GLF3D/Core/: Application.cpp  Application.h  Core.h  Debugger.cpp  Window.h
Engine/GLF3D/Scene/: Game.h
Engine/Include/: GLF3D.h  Lion.h  Owl.h
Engine/Include/Lion/: Core.h  EntryPoint.h  Launcher.h  Lion.h
Engine/Shader/: DefaultPixel.hlsl  DefaultVertex.hlsl
Engine/Shaders/: DefaultFrag.glsl  DefaultVert.glsl
Engine/Source/Core/: Application.cpp  Application.h  Asset.cpp  Asset.h  Clock.h  Cursor.cpp  Debug.cpp  Debug.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Stack.cpp  Stack.h  Window.cpp  Window.h
Engine/Source/Event/: Debug.cpp  Input.cpp  Time.cpp
Engine/Source/Events/: Event.cpp  Event.h  EventDispatcher.h  EventInput.h  EventInputMouse.cpp  EventInputMouse.h  EventWindow.cpp  EventWindow.h
Engine/Source/Kind/: Allocators.cpp  Depth.cpp  Layer.cpp  Macros.cpp  Macros.h  (+7 more)
GLF3D/: Application.cpp  Application.h  Game.cpp  Game.h  Main.cpp  PCH.h  Utils.cpp  Utils.h  Window.cpp  Window.h
Game/: Alien.cpp  Alien.h  Main.cpp  Missile.cpp  Missile.h  Resource.rc  Resources.h  Sandbox.cpp  Sandbox.h  Spaceship.cpp  Spaceship.h  premake5.lua
Game/Data/: Resource.rc  Resources.h
Game/Resource/: Resource.rc
Game/Resources/: Resource.aps  Resource.rc
Game/Script/: Frogger.cpp  Frogger.h  Resources.h  Sandbox.cpp  Sandbox.h
Game/Source/: Alien.h  CoreLayer.cpp  CoreLayer.h  ExampleLayer.cpp  ExampleLayer.h  GameplayLayer.cpp  GameplayLayer.h  Header.cpp  Header.h  Main.cpp  Missile.cpp  Missile.h  Obstacle.cpp  Obstacle.h  Resources.h  Sandbox.cpp  Sandbox.h  Shank.cpp  Shank.h  Spaceship.cpp  Spaceship.h  WindowLayer.cpp  WindowLayer.h
Launcher/: Launcher.rc  Main.cpp  premake5.lua
Mane/: Editor.cpp  premake5.lua
Mane/Source/: EditorGui.cpp  ModuleSymbols.cpp
Packer/: Main.cpp  premake5.lua
Sandbox/: GLF3D.cpp  GLF3D.h  GameModule.cpp  PCH.h  premake5.lua
Sandbox/Source/: Main.cpp  MainGame.cpp  MainGame.h  Quad.cpp  Quad.h  Sandbox.cpp  Sandbox.h
Scripts/: AssetCopyExclude.txt  Build.bat  Generate.bat  ObfuscateShaders.ps1  PackLicenses.bat  PackSdk.bat
_Dependencies/: README.txt
(+298 files in other folders)
